Restructure the project
- A record has been added for the artifact_type and for the TOSCAFile.
- Multiple diagnoses are now supported.